@@ -1,5 +1,17 @@
 2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Fix some whitespace handling with `sl_set' / `sl_get'.
+
+	* tools/lib/t-pppalpha/slimpl.m4,
+	* tools/lib/t-ptl/slimpl.m4,
+	* tools/lib/t-seqc/slimpl.m4,
+	* tools/lib/t-utc/slimpl.m4,
+	* tools/lib/t-utc0/slimpl.m4: Use `m4_normalize' and `m4_ifblank'
+	where appropriate.
+	
+
+2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Upgrade to latest version of M4Sugar.
 
 	* tools/include/m4sugar.m4,
